Update AI webhook integration to support structured extraction payload and flexible field mapping